--- a/Pluto/Base.lproj/LaunchScreen.storyboard
+++ b/Pluto/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="k6g-Ba-biw">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="24G-U9-ADV"/>
+                                    <constraint firstAttribute="height" constant="128" id="TfX-PN-zDt"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="k6g-Ba-biw" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="DuO-Ry-zvF"/>
+                            <constraint firstItem="k6g-Ba-biw" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="VH5-sQ-pgO"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +36,7 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="2000" height="1000"/>
+    </resources>
 </document>
