--- a/Pluto/Base.lproj/Main.storyboard
+++ b/Pluto/Base.lproj/Main.storyboard
@@ -394,16 +394,6 @@
                                                                 <constraint firstAttribute="width" constant="120" id="RLd-9R-Zbn"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o0x-sE-Efa">
-                                                            <rect key="frame" x="135" y="20" width="165" height="50"/>
-                                                            <color key="backgroundColor" red="0.066666666669999999" green="0.18039215689999999" blue="0.25098039220000001" alpha="0.0" colorSpace="calibratedRGB"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="50" id="zm1-Rd-SKO"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="20"/>
-                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
                                                         <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ship-faded" translatesAutoresizingMaskIntoConstraints="NO" id="vMD-Nk-UsK">
                                                             <rect key="frame" x="292" y="99" width="20" height="20"/>
                                                             <gestureRecognizers/>
@@ -422,21 +412,21 @@
                                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPt-II-TGc">
-                                                            <rect key="frame" x="135" y="109" width="130" height="12"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time and Place" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udC-fe-vIc">
+                                                            <rect key="frame" x="135" y="70" width="165" height="12"/>
                                                             <color key="backgroundColor" red="0.066666666669999999" green="0.18039215689999999" blue="0.25098039220000001" alpha="0.0" colorSpace="calibratedRGB"/>
                                                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="10"/>
                                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udC-fe-vIc">
-                                                            <rect key="frame" x="135" y="3" width="130" height="12"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o0x-sE-Efa">
+                                                            <rect key="frame" x="135" y="20" width="165" height="50"/>
                                                             <color key="backgroundColor" red="0.066666666669999999" green="0.18039215689999999" blue="0.25098039220000001" alpha="0.0" colorSpace="calibratedRGB"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="130" id="4RJ-ae-sqb"/>
+                                                                <constraint firstAttribute="height" constant="50" id="HIj-LV-KlF"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="10"/>
-                                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="20"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -444,19 +434,17 @@
                                                     <constraints>
                                                         <constraint firstItem="vMD-Nk-UsK" firstAttribute="leading" secondItem="nBc-68-oHx" secondAttribute="trailing" id="0bh-7Q-19P"/>
                                                         <constraint firstAttribute="bottom" secondItem="nBc-68-oHx" secondAttribute="bottom" constant="3" id="16c-vS-t1c"/>
-                                                        <constraint firstItem="udC-fe-vIc" firstAttribute="leading" secondItem="7Uu-Q6-wOo" secondAttribute="trailing" constant="15" id="7EC-qq-Dnj"/>
-                                                        <constraint firstItem="udC-fe-vIc" firstAttribute="top" secondItem="un0-ke-6r6" secondAttribute="top" constant="3" id="7J2-OU-kGC"/>
                                                         <constraint firstItem="7Uu-Q6-wOo" firstAttribute="leading" secondItem="un0-ke-6r6" secondAttribute="leading" id="AXZ-U9-DHH"/>
-                                                        <constraint firstItem="o0x-sE-Efa" firstAttribute="leading" secondItem="7Uu-Q6-wOo" secondAttribute="trailing" constant="15" id="IMd-h6-UDv"/>
+                                                        <constraint firstAttribute="trailing" secondItem="o0x-sE-Efa" secondAttribute="trailing" constant="20" id="BXS-Hj-v8G"/>
                                                         <constraint firstItem="7Uu-Q6-wOo" firstAttribute="top" secondItem="un0-ke-6r6" secondAttribute="top" id="QM1-s4-gLQ"/>
+                                                        <constraint firstItem="o0x-sE-Efa" firstAttribute="top" secondItem="un0-ke-6r6" secondAttribute="top" constant="20" id="RtF-ij-wAM"/>
                                                         <constraint firstAttribute="bottom" secondItem="7Uu-Q6-wOo" secondAttribute="bottom" id="UiH-29-zqw"/>
                                                         <constraint firstAttribute="bottom" secondItem="vMD-Nk-UsK" secondAttribute="bottom" constant="5" id="Vwa-Uy-iCg"/>
-                                                        <constraint firstItem="o0x-sE-Efa" firstAttribute="top" secondItem="udC-fe-vIc" secondAttribute="bottom" constant="5" id="bMQ-fJ-xYv"/>
-                                                        <constraint firstItem="LPt-II-TGc" firstAttribute="leading" secondItem="7Uu-Q6-wOo" secondAttribute="trailing" constant="15" id="eVO-uH-0YQ"/>
-                                                        <constraint firstItem="nBc-68-oHx" firstAttribute="leading" secondItem="LPt-II-TGc" secondAttribute="trailing" constant="2" id="gRW-gd-Yjt"/>
+                                                        <constraint firstItem="udC-fe-vIc" firstAttribute="leading" secondItem="7Uu-Q6-wOo" secondAttribute="trailing" constant="15" id="Zh2-ZH-yk6"/>
+                                                        <constraint firstItem="o0x-sE-Efa" firstAttribute="leading" secondItem="7Uu-Q6-wOo" secondAttribute="trailing" constant="15" id="b0U-rJ-EDA"/>
+                                                        <constraint firstItem="udC-fe-vIc" firstAttribute="top" secondItem="o0x-sE-Efa" secondAttribute="bottom" id="ewf-pE-zZ6"/>
                                                         <constraint firstItem="vMD-Nk-UsK" firstAttribute="trailing" secondItem="un0-ke-6r6" secondAttribute="trailingMargin" id="k5v-Xi-bSD"/>
-                                                        <constraint firstAttribute="bottom" secondItem="LPt-II-TGc" secondAttribute="bottom" constant="3" id="so2-oX-hc8"/>
-                                                        <constraint firstAttribute="trailing" secondItem="o0x-sE-Efa" secondAttribute="trailing" constant="20" id="yvV-Yb-Xb1"/>
+                                                        <constraint firstAttribute="trailing" secondItem="udC-fe-vIc" secondAttribute="trailing" constant="20" id="otp-CY-yum"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -471,10 +459,9 @@
                                         <color key="backgroundColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="0.0" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="eventImageView" destination="7Uu-Q6-wOo" id="QoD-4d-Ihd"/>
-                                            <outlet property="eventLocationLabel" destination="LPt-II-TGc" id="LHq-nM-LN1"/>
                                             <outlet property="eventPlutoCountLabel" destination="nBc-68-oHx" id="f32-h4-d01"/>
                                             <outlet property="eventPlutoImageView" destination="vMD-Nk-UsK" id="XE3-Iz-V3z"/>
-                                            <outlet property="eventTimeLabel" destination="udC-fe-vIc" id="1x1-qi-Ikc"/>
+                                            <outlet property="eventTimeAndPlaceLabel" destination="udC-fe-vIc" id="wjS-yb-d8F"/>
                                             <outlet property="eventTitleLabel" destination="o0x-sE-Efa" id="8Sf-xw-PdK"/>
                                         </connections>
                                     </tableViewCell>
@@ -528,7 +515,7 @@
                                         <rect key="frame" x="0.0" y="16" width="320" height="120"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap here to choose an image" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aGN-Sq-wex">
-                                                <rect key="frame" x="50.5" y="49" width="220" height="22"/>
+                                                <rect key="frame" x="50" y="49" width="220" height="22"/>
                                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
@@ -689,6 +676,13 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time and Place" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Spw-pF-X5K">
+                                <rect key="frame" x="26" y="275" width="258" height="12"/>
+                                <color key="backgroundColor" red="0.066666666669999999" green="0.18039215689999999" blue="0.25098039220000001" alpha="0.0" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="10"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZrD-4t-4IW">
                                 <rect key="frame" x="20" y="220" width="264" height="70"/>
                                 <constraints>
@@ -740,10 +734,13 @@
                         <constraints>
                             <constraint firstItem="X9b-Xb-5ij" firstAttribute="top" secondItem="ZrD-4t-4IW" secondAttribute="bottom" constant="10" id="4Ob-et-HPk"/>
                             <constraint firstItem="Dog-WR-5wx" firstAttribute="top" secondItem="b6A-C3-pIR" secondAttribute="bottom" id="D8P-8e-FvU"/>
+                            <constraint firstItem="Spw-pF-X5K" firstAttribute="leading" secondItem="CKs-na-z2u" secondAttribute="leadingMargin" constant="10" id="MAz-8q-Xd7"/>
                             <constraint firstItem="X9b-Xb-5ij" firstAttribute="top" secondItem="Dog-WR-5wx" secondAttribute="bottom" id="bG3-uw-EIM"/>
                             <constraint firstItem="ZrD-4t-4IW" firstAttribute="leading" secondItem="CKs-na-z2u" secondAttribute="leading" constant="20" id="dZu-AE-pZ5"/>
                             <constraint firstAttribute="trailing" secondItem="X9b-Xb-5ij" secondAttribute="trailing" id="ejZ-rK-xvR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Spw-pF-X5K" secondAttribute="trailing" constant="20" id="gEA-1v-NqM"/>
                             <constraint firstItem="X9b-Xb-5ij" firstAttribute="leading" secondItem="CKs-na-z2u" secondAttribute="leading" id="ikF-RB-P7x"/>
+                            <constraint firstItem="Spw-pF-X5K" firstAttribute="top" secondItem="ZrD-4t-4IW" secondAttribute="bottom" constant="-15" id="jxE-b9-gsU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ZrD-4t-4IW" secondAttribute="trailing" constant="20" id="mxe-qf-k6X"/>
                             <constraint firstItem="TCh-zj-5Bh" firstAttribute="top" secondItem="X9b-Xb-5ij" secondAttribute="bottom" id="r4w-tq-aGj"/>
                             <constraint firstItem="Dog-WR-5wx" firstAttribute="leading" secondItem="CKs-na-z2u" secondAttribute="leading" id="ris-uU-QMX"/>
@@ -755,6 +752,7 @@
                         <outlet property="detailsView" destination="X9b-Xb-5ij" id="pD9-iT-cDQ"/>
                         <outlet property="eventDescriptionTextView" destination="ws8-XN-wfb" id="LGO-Ku-De0"/>
                         <outlet property="eventImageView" destination="Tnw-bL-vAP" id="yIU-Cq-gjc"/>
+                        <outlet property="eventTimeAndPlaceLabel" destination="Spw-pF-X5K" id="Lew-f3-Gge"/>
                         <outlet property="eventTitleLabel" destination="ZrD-4t-4IW" id="8cf-xT-H0v"/>
                         <outlet property="headerView" destination="Dog-WR-5wx" id="cjF-Sr-U1w"/>
                         <segue destination="brO-3r-XOE" kind="show" identifier="showEditEvent" id="VFe-2r-F18"/>
